Fixed horizontal overflow issue with the service tabs on the website and changed font size for the closing. Also changed the wording for the content in the banner.

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -491,7 +491,7 @@ input[type=text] {
 
 @media screen and (max-width: 320px) {
     .closing p {
-        font-size: 8px;
+        font-size: 7px;
     }
 }
 
@@ -552,6 +552,7 @@ input[type=text] {
     .services-tabs {
         flex-direction: column;
         align-self: center;
+        padding: 32px 20px;
     }
 
     .service {
